--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <h1>Users</h1>
+    <ul class="users-list"></ul>
+
+    <h2>Create New User</h2>
+    <form class="create-user-form">
+      <input type="text">
+      <button>Create User</button>
+    </form>
     <script src="./script.js"></script>
   </body>
 </html>
