Add class and required to input create form

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <h2>Create New User</h2>
     <form class="create-user-form">
-      <input type="text">
+      <input type="text" class="user-name" required>
       <button>Create User</button>
     </form>
     <script src="./script.js"></script>
