Add button to toogle theme

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
       <input type="text" class="user-name" required>
       <button>Create User</button>
     </form>
+    <button 
+      type="button" 
+      class="themeToogle"
+    >
+      Toogle Theme
+    </button>
     <script src="./script.js"></script>
   </body>
 </html>
