--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>API Example</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>Users</h1>
@@ -12,15 +12,10 @@
 
     <h2>Create New User</h2>
     <form class="create-user-form">
-      <input type="text" class="user-name" required>
+      <input type="text" class="user-name" required />
       <button>Create User</button>
     </form>
-    <button 
-      type="button" 
-      class="themeToogle"
-    >
-      Toogle Theme
-    </button>
+    <button type="button" class="themeToogle">Toogle Theme</button>
     <script src="./script.js"></script>
   </body>
 </html>
