--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <h2>Create New User</h2>
     <form class="create-user-form">
-      <input type="text" class="user-name" required />
+      <input type="text" class="user-name" placeholder="Username" required />
       <button>Create User</button>
     </form>
     <button type="button" class="themeToogle">Toogle Theme</button>
